--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -4,16 +4,21 @@
 server.port=${PORT:8080}
 
 # ========================
-# MYSQL DATABASE CONFIG
+# DATABASE CONFIG
+# ========================
+# For LOCAL development (MySQL):
+#   Leave DATABASE_URL unset — it defaults to MySQL localhost
+# For RENDER deployment (PostgreSQL):
+#   Set DATABASE_URL=jdbc:postgresql://HOST:PORT/DB_NAME
+#   Set DATABASE_USERNAME and DATABASE_PASSWORD
 # ========================
 spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/expense_tracker_db?createDatabaseIfNotExist=true}
 spring.datasource.username=${DATABASE_USERNAME:root}
 spring.datasource.password=${DATABASE_PASSWORD:root}
-spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 
 # ========================
 # JPA / HIBERNATE CONFIG
 # ========================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.properties.hibernate.dialect=org.hibernate.dialect.MySQLDialect
+spring.jpa.database-platform=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
