--- a/backend/src/main/resources/application.properties
+++ b/backend/src/main/resources/application.properties
@@ -6,19 +6,19 @@ server.port=${PORT:8080}
 # ========================
 # DATABASE CONFIG
 # ========================
-# For LOCAL development (MySQL):
-#   Leave DATABASE_URL unset — it defaults to MySQL localhost
+# For LOCAL development (PostgreSQL via Homebrew):
+#   Leave DATABASE_URL unset — it defaults to local PostgreSQL
 # For RENDER deployment (PostgreSQL):
 #   Set DATABASE_URL=jdbc:postgresql://HOST:PORT/DB_NAME
 #   Set DATABASE_USERNAME and DATABASE_PASSWORD
 # ========================
-spring.datasource.url=${DATABASE_URL:jdbc:mysql://localhost:3306/expense_tracker_db?createDatabaseIfNotExist=true}
-spring.datasource.username=${DATABASE_USERNAME:root}
-spring.datasource.password=${DATABASE_PASSWORD:root}
+spring.datasource.url=${DATABASE_URL:jdbc:postgresql://localhost:5432/expense_tracker_db}
+spring.datasource.username=${DATABASE_USERNAME:shivanshmishra}
+spring.datasource.password=${DATABASE_PASSWORD:}
 
 # ========================
 # JPA / HIBERNATE CONFIG
 # ========================
 spring.jpa.hibernate.ddl-auto=update
 spring.jpa.show-sql=true
-spring.jpa.database-platform=${HIBERNATE_DIALECT:org.hibernate.dialect.MySQLDialect}
+spring.jpa.database-platform=${HIBERNATE_DIALECT:org.hibernate.dialect.PostgreSQLDialect}
